<resources>
    <string name="app_name">Mixologic</string>

    <!-- Titles -->
    <string name="drinks">Drinks</string>
    <string name="liquors">Liquors</string>
    <string name="ingredients">Ingredients</string>
    <string name="instructions">Instructions</string>
    <string name="unit">Unit</string>
    <string name="my_recipes">My recipes</string>
    <string name="create_drink">Create drink</string>
    <string name="favourites">Favourites</string>
    <string name="pantry">Pantry</string>
    <string name="settings">Settings</string>
    <string name="edit_liquor">Edit %s</string>

    <!-- Prompts -->
    <string name="enter_drink_name">Drink name...</string>
    <string name="enter_instructions">Instructions...</string>
    <string name="add_liquor">Add liquor</string>
    <string name="add_ingredient">Add ingredient</string>
    <string name="set_ingredient">Ingredient...</string>
    <string name="set_amount">Amount...</string>
    <string name="hint_search">Search...</string>

    <!-- Buttons -->
    <string name="submit">Submit</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="log_out">Log out</string>

    <!-- Login -->
    <string name="login">Login</string>
    <string name="sign_up">Sign up</string>
    <string name="password">Password</string>
    <string name="email">E-mail</string>
    <string name="username">Username</string>

    <!-- Organize -->
    <string name="filter_by_pantry">Filter by pantry</string>
    <string name="sort_by_favourite">Sort by likes</string>
    <string name="sort_by_name_az">Sort by A-Z</string>
    <string name="sort_by_name_za">Sort by Z-A</string>

    <!-- Profile -->
    <string name="profile_pantry">Pantry: %s</string>
    <string name="profile_recipe">Recipes: %s</string>

</resources>