<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorGrayTransparent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:padding="16dp"
        android:background="@color/white">

        <TextView
            android:id="@+id/addIngredientTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/selectorContainer"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginBottom="16dp"
            android:text="@string/add_ingredient"
            android:textSize="18sp"
            android:textColor="@color/turquoise"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/selectorContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/addIngredientTitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/addButton">


            <EditText
                android:id="@+id/ingredientEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/set_ingredient"
                app:layout_constraintTop_toBottomOf="@+id/liquorSpinner"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="13dp"
                android:focusableInTouchMode="true"
                android:maxLength="30" />

            <EditText
                android:id="@+id/unitEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/set_amount"
                app:layout_constraintTop_toBottomOf="@+id/ingredientEditText"
                app:layout_constraintEnd_toStartOf="@id/unitSpinner"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="13dp"
                android:focusableInTouchMode="true"
                android:maxLength="15"
                android:inputType="numberDecimal"/>

            <Spinner
                android:id="@+id/unitSpinner"
                android:prompt="@string/unit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/ingredientEditText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/unitEditText"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:id="@+id/cancelButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/selectorContainer"
            app:layout_constraintEnd_toStartOf="@id/addButton"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/cancel"
            android:backgroundTint="@color/white"
            android:textColor="@color/turquoise"
            android:layout_marginTop="16dp"/>

        <Button
            android:id="@+id/addButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/selectorContainer"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/cancelButton"
            android:backgroundTint="@color/turquoise"
            android:text="@string/add"

            android:layout_marginTop="16dp"/>




    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>