<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp">

            <ImageView
                android:id="@+id/uploadImageView"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:src="@drawable/ic_add_photo"
                app:layout_constraintTop_toTopOf="parent"
                android:background="@drawable/edit_text"/>

            <EditText
                android:id="@+id/drinkNameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:imeOptions="actionDone"
                android:maxLines="1"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/uploadImageView"
                app:layout_constraintStart_toStartOf="parent"
                android:hint="@string/enter_drink_name"
                android:padding="8dp"

                android:background="@drawable/edit_text" />

            <TextView
                android:id="@+id/liquorsTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/drinkNameEditText"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginVertical="16dp"
                android:textSize="20sp"
                android:text="@string/liquors" />

            <ImageView
                android:id="@+id/addLiquorButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_add"
                android:layout_marginStart="8dp"
                app:layout_constraintStart_toEndOf="@+id/liquorsTitle"
                app:layout_constraintTop_toTopOf="@id/liquorsTitle"
                app:layout_constraintBottom_toBottomOf="@id/liquorsTitle" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/liquorsRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/liquorsTitle"
                android:layout_marginTop="8dp"/>

            <TextView
                android:id="@+id/ingredientsTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/liquorsRecyclerView"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginVertical="16dp"
                android:textSize="20sp"
                android:text="@string/ingredients" />

            <ImageView
                android:id="@+id/addIngredientButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_add"
                android:layout_marginStart="8dp"
                app:layout_constraintStart_toEndOf="@+id/ingredientsTitle"
                app:layout_constraintTop_toTopOf="@id/ingredientsTitle"
                app:layout_constraintBottom_toBottomOf="@id/ingredientsTitle" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/ingredientsRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ingredientsTitle"
                android:layout_marginTop="8dp"/>

            <EditText
                android:id="@+id/instructionsEditText"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginVertical="16dp"
                android:padding="8dp"
                app:layout_constraintTop_toBottomOf="@id/ingredientsRecyclerView"
                android:background="@drawable/edit_text"
                android:hint="@string/enter_instructions"
                android:gravity="top"/>

            <Button
                android:id="@+id/submitButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/instructionsEditText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="50dp"
                android:backgroundTint="@color/mango"
                android:text="@string/submit"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>